<resources>
    <string name="app_name">LIMAP</string>
    <string name="title_developer">GODARIO TECHNOLOGIES</string>
    <string name="title_activity_registration">Edit Profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="preference_file_key">com.limap.preference</string>

    <string name="action_settings">Settings</string>
    <string name="label_registration">Fill profile to post add or add to favorite.</string>
    <string name="hint_mobile">Mobile No (ID)</string>
    <string name="otp">Enter OTP</string>
    <string name="hint_fullname">Contact Person Name</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_nickname">Nickname / Username</string>
    <string name="action_save_profile">Save Profile</string>
    <string name="label_note">Note: User needs to get verified by administrator withing 24 hour, User once verified can use the app premium functionalities.</string>
    <string name="note_agreement">By registering I m agree with the <a href="#">Terms &amp; Condition</a> \n and <a href="#">Privacy Policy</a></string>
    <string name="title_doctor">Are you an Animal Doctor?</string>
    <string name="note_doctor">You will get unique referral code to get referral amount on each completed deals.</string>
    <string name="title_seller">Seller</string>
    <string name="title_buyer">Buyer</string>
    <string name="title_doctor2">Animal Doctor</string>
    <string name="hint_address">Address</string>
    <string name="hint_village">Village / City</string>
    <string name="hint_taluka">Taluka</string>
    <string name="hint_district">District</string>
    <string name="hint_state">State</string>
    <string name="title_activity_main">LIMAP</string>
    <string name="title_home">HOME</string>
    <string name="title_sell">SELL</string>
    <string name="title_adds">MY POSTS</string>
    <string name="title_favorite">FAVOURITE</string>
    <string name="title_account">ACCOUNT</string>
    <string name="label_sell">Fill out the below information to post your add.</string>
    <string name="label_search">Fill out the below information to search post.</string>
    <string name="hint_add_title">Add Title</string>
    <string name="hint_add_description">Add description in brief.</string>
    <string name="title_activity_post_add">Post Advertisement</string>
    <string name="hint_price">Price</string>
    <string name="action_next">NEXT</string>
    <string name="action_otp">GET OTP</string>
    <string name="action_verify_otp">VERIFY OTP</string>
    <string name="title_activity_upload_photos">Upload Photos</string>
    <string name="title_profile_name">Profile Name</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="hint_add_location">Add Service Location</string>
    <string name="hint_add_serving_location">Serving Villages</string>
    <string name="title_location">Location</string>
    <string name="note_location">List of service locations</string>
    <string name="title_enquiry_order">My Enquiries / Orders</string>
    <string name="title_cow">Cow</string>
    <string name="title_buffalo">Buffalo</string>
    <string name="title_ox">Ox</string>
    <string name="option_gabhan">Pregnant</string>
    <string name="option_dubhti">Milking</string>
    <string name="option_vasaru">Calf</string>
    <string name="title_category">Choose Category</string>
    <string name="title_speciality">Choose Speciality</string>
    <string name="hint_variety">Variety</string>
    <string name="title_variety">Choose Variety</string>
    <string name="hint_age_cowbuffalo">Age</string>
    <string name="hint_age_ox">Age/No of teeth</string>
    <string name="hint_vet">Lactation Period</string>
    <string name="hint_preg">Pregnancy Status</string>
    <string name="hint_milk_history">Last Milk History - ltr</string>
    <string name="title_ltr">ltr</string>
    <string name="title_photo_upload">Click to browse or capture photos/video</string>
    <string name="title_photo_seller">Photo with seller</string>
    <string name="title_photo_left">Photo from left</string>
    <string name="title_photo_right">Photo from right</string>
    <string name="title_photo_back">Photo from back</string>
    <string name="title_photo_certificate">Dr Certificate/Card</string>
    <string name="title_video">Short Video</string>
    <string name="title_video_validate">Please upload Video upto 10Mb size </string>
    <string name="title_photo_other">Other</string>
    <string name="action_post_add">Post Advertisement</string>
    <string name="title_photo">Item Photo</string>
    <string name="title_title">Title</string>
    <string name="title_description">Description</string>
    <string name="title_activity_view_add">View Advertisement</string>

    <string name="title_filter_category">FILTER CATEGORY</string>
    <string name="title_selected_category">CATEGORY</string>
    <string name="title_selected_speciality">Speciality</string>

    <string-array name="array_variety_cowox">
        <item>Jersey</item>
        <item>Holstien Friesian</item>
        <item>Khillari</item>
        <item>Gyr</item>
        <item>Dangi</item>
        <item>Devni</item>
        <item>Sindhi</item>
    </string-array>

    <string-array name="array_variety_buffalo">
        <item>Marrah</item>
        <item>Surti</item>
        <item>Jafarabadi</item>
        <item>Nagpuri</item>
        <item>Nili-Ravi</item>
        <item>Pandharpuri</item>
    </string-array>

    <string-array name="array_vet">
        <item>Lactation Period - 1</item>
        <item>Lactation Period - 2</item>
        <item>Lactation Period - 3</item>
        <item>Lactation Period - 4</item>
        <item>Lactation Period - 5</item>
        <item>Lactation Period - 6</item>
        <item>Lactation Period - 7</item>
        <item>Lactation Period - 8</item>
        <item>Lactation Period - 9</item>
        <item>Lactation Period - 10</item>
    </string-array>

    <string-array name="array_preg">
        <item>1 Month</item>
        <item>2 Months</item>
        <item>3 Months</item>
        <item>4 Months</item>
        <item>5 Months</item>
        <item>6 Months</item>
        <item>7 Months</item>
        <item>8 Months</item>
        <item>9 Months</item>

    </string-array>
    <string name="title_activity_category_add">Add by Category</string>
    <string name="action_search">Search Here...</string>
    <string name="title_activity_search">Search...</string>
    <string name="title_activity_video">Playing Video</string>
    <string name="title_tagline">Live Stock Sale &amp; Purchase</string>
    <string name="action_doctor">Doctor</string>
    <string name="title_activity_doctor_list">Doctor List</string>
    <string name="title_doctor_name">Doctors Name</string>
    <string name="title_mobile">Mobile</string>
    <string name="title_profile_detail">Profile Details</string>
    <string name="hint_speciality">Specialist / Speciality</string>
    <string name="hint_experience">Experience</string>
    <string name="title_activity_language">Language</string>
    <string name="title_select_language">Select Language (Default English)</string>
    <string name="action_hindi">हिन्दी</string>
    <string name="action_english">English</string>
    <string name="action_marathi">मराठी</string>
    <string name="action_gujrati">ગુજરાતી</string>
    <string name="action_skip">Skip</string>
    <string name="empty">Cannot be empty</string>
    <string name="invalid">Invalid</string>

    <string name="age">Age: %1$d</string>
    <string name="milkhistory">Last Milk History: %1$d ltr</string>
</resources>
