<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/title_favorite" />

    <item
        android:id="@+id/navigation_sell"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/title_sell" />

    <item
        android:id="@+id/navigation_adds"
        android:icon="@drawable/ic_baseline_pets_24"
        android:title="@string/title_adds" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_account" />
</menu>