<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp"
    android:paddingBottom="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_search"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorHeadBack"
                android:padding="8dp"
                android:text="@string/title_category"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/cow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:text="@string/title_cow" />

                <RadioButton
                    android:id="@+id/buffalo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/title_buffalo" />

                <RadioButton
                    android:id="@+id/ox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_ox" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvspeciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorHeadBack"
                android:padding="8dp"
                android:paddingRight="8dp"
                android:text="@string/title_speciality"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/specialitycb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/gabhan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:checked="true"
                    android:text="@string/option_gabhan" />

                <RadioButton
                    android:id="@+id/dubhti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:text="@string/option_dubhti" />

                <RadioButton
                    android:id="@+id/vasaru"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/option_vasaru" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:text="@string/hint_variety"
                    android:textColor="@color/black"
                    android:textSize="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spinnerVariety"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linearLayout"
                    android:background="@drawable/shape_drop_down_normal"
                    android:paddingLeft="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:drawableRight="@drawable/ic_baseline_double_arrow_24"
        android:padding="12dp"
        android:text="@string/title_activity_search" />

</LinearLayout>