<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:elevation="4dp"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:padding="4dp"
                android:text="@string/title_selected_category"
                android:visibility="gone"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:alwaysDrawnWithCache="false"
                    android:background="@color/colorCard"
                    android:clipChildren="false"
                    android:clipToPadding="false">

                </androidx.viewpager.widget.ViewPager>

                <ImageView
                    android:id="@+id/pre"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_left_24"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/next"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/ic_baseline_keyboard_arrow_right_24"
                    tools:ignore="VectorDrawableCompat" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:elevation="4dp"
                android:orientation="horizontal"
                android:paddingStart="8dp"
                android:paddingTop="12dp"
                android:paddingEnd="8dp"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/title_title"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/floatingActionButton"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorAccent"
                    android:clickable="true"
                    android:src="@drawable/ic_baseline_favorite_border_24"
                    android:tint="@android:color/white"
                  />
                <ImageView
                    android:id="@+id/imageViewCall"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorAccent"
                    android:clickable="true"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_call"
                    android:tint="@android:color/white"
                    />
                <ImageView
                    android:id="@+id/imageViewShare"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/colorAccent"
                    android:clickable="true"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/ic_share"
                    android:tint="@android:color/white"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/speciality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/title_selected_speciality" />

            <TextView
                android:id="@+id/variety"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/hint_variety" />

            <TextView
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/hint_age_cowbuffalo" />

            <TextView
                android:id="@+id/vet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/hint_vet" />

            <TextView
                android:id="@+id/milkhistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/hint_milk_history" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorHeadBack"
                android:padding="8dp"
                android:text="@string/title_description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/title_description"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>