<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="58dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorHeadBack"
            android:elevation="4dp"
            android:gravity="center"
            android:padding="4dp">

            <LinearLayout
                android:id="@+id/cow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/cow" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/title_cow"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/buffalo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/buffalo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/title_buffalo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ox"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/ox" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/title_ox"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/doctor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/doctor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:elevation="3dp"
                    android:focusable="true"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/action_doctor"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBack"
            android:orientation="vertical"
            android:padding="4dp">

            <FrameLayout
                android:id="@+id/homeFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:nestedScrollingEnabled="false"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                        <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:id="@+id/pbar"
                            android:progressTint="@color/colorPrimary"
                            android:indeterminateTint="@color/colorPrimary"
                            style="?android:attr/progressBarStyleSmall"/>
                    </RelativeLayout>



            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>